manifests/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend-service
spec:
  selector:
    app: todo-frontend
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
